<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="2dp"
        android:textAlignment="viewEnd"
        app:menu="@menu/statement_menu"
        app:titleTextColor="@android:color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_toolbar_statement"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp">

        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondary"
        android:padding="10dp"
        android:textColor="@android:color/white">

    </TextView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/latest_movements"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/container_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <Button
                android:id="@+id/btn_continue"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/background_button"
                android:text="@string/btn_continue"
                android:textColor="@android:color/white">

            </Button>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>